--- a/app/views/weather_reports/new.html.erb
+++ b/app/views/weather_reports/new.html.erb
@@ -1,9 +1,34 @@
-<h1>New weather report</h1>
+<div class='container'>
+  <div class='row mt-4'>
+    <div class='col-md-4 offset-md-3 align-self-center'>
+      <div class='card'>
+        <div class='card-body'>
+          <h3 class='text-center'>New Weather Report</h3>
+          <p>Enter the city, state, and zip code for the weather report you would like to see.</p>
+          <%= form_with url: by_address_weather_reports_path, method: :get do |form| %>
+            <div class='row'>
+              <div class='col'>
+                <div class='form-group'>
+                  <%= form.label :city %>
+                  <%= form.text_field :city, class: 'form-control' %>
+                </div>
+              </div>
+            </div>
+            <div class='form-group'>
+              <%= form.label :state %>
+              <%= form.select :state, us_states, {}, { class: 'form-select' } %>
+            </div>
+            <div class='form-group'>
+              <%= form.label :zip %>
+              <%= form.text_field :zip, class: 'form-control' %>
+            </div>
+            <div class='form-group mt-2 offset-md-3'>
+              <%= form.submit 'Get Weather Report', class: 'btn btn-primary' %>
+            </div>
+          <% end %>
 
-<%= render "form", weather_report: @weather_report %>
-
-<br>
-
-<div>
-  <%= link_to "Back to weather reports", weather_reports_path %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
