--- a/app/views/weather_reports/new.html.erb
+++ b/app/views/weather_reports/new.html.erb
@@ -10,7 +10,7 @@
               <div class='col'>
                 <div class='form-group'>
                   <%= form.label :street %>
-                  <%= form.text_field :street, class: 'form-control' %>
+                  <%= form.text_field :street, class: 'form-control', required: true %>
                 </div>
               </div>
             </div>
@@ -18,7 +18,7 @@
               <div class='col'>
                 <div class='form-group'>
                   <%= form.label :city %>
-                  <%= form.text_field :city, class: 'form-control' %>
+                  <%= form.text_field :city, class: 'form-control', required: true %>
                 </div>
               </div>
             </div>
