--- a/app/views/weather_reports/by_address.html.erb
+++ b/app/views/weather_reports/by_address.html.erb
@@ -27,86 +27,13 @@
   <div class='container'>
     <div class='row mt-4 equal'>
       <% @daily_forecasts[0..4].each_with_index do |forecast, idx| %>
-        <div class='col-md-2'>
-          <div id='forecast_card_<%= idx %>' class='card h-100' data-controller='forecast'>
-            <div class='card-body'>
-              <div class='card-title'>
-                <h5><%= forecast.date.strftime('%a %b %d') %></h5>
-              </div>
-              <div class='card-text'>
-                <p><strong>High:</strong> <%= forecast.max_temp %>&deg;</p>
-                <p><strong>Low:</strong> <%= forecast.min_temp %>&deg;</p>
-                <p><%= forecast.summary %></p>
-                <div style='display: none;' class='forecast-detail'>
-                  <div class='card mt-4 self-align-center col-md-8 offset-md-1'>
-                    <div class='card-body'>
-                      <div class='card-title'>
-                        <h5> Weather On <%= forecast.date.strftime('%a %b %d') %></h5>
-                        <div class='card-text'>
-                          <div class='row'>
-                            <div class='col-md-6'>
-                              <div class='row'>
-                                <div class='col'>
-                                  <strong>Morning Temperature:</strong> <%= forecast.morn_temp %>&deg; (Feels Like <%= forecast.morn_feels %>&deg;)
-                                </div>
-                              </div>
-                              <div class='row'>
-                                <div class='col'>
-                                  <strong>Evening Temperature:</strong> <%= forecast.eve_temp %>&deg; (Feels Like <%= forecast.eve_feels %>&deg;)
-                                </div>
-                              </div>
-                              <div class='row'>
-                                <div class='col'>
-                                  <strong>Night Temperature:</strong> <%= forecast.night_temp %>&deg; (Feels Like <%= forecast.night_feels %>&deg;)
-                                </div>
-                              </div>
-                              <div class='row'>
-                                <div class='col'>
-                                  <strong>UV Index:</strong> <%= forecast.uv_index %>
-                                </div>
-                              </div>
-                            </div>
-
-                            <div class='col-md-6'>
-                              <div class='row'>
-                                <div class='col'>
-                                  <strong>Humidity:</strong> <%= forecast.humidity %>
-                                </div>
-                              </div>
-                              <div class='row'>
-                                <div class='col'>
-                                  <strong>Wind:</strong> <%= forecast.wind_speed %> mph out of the <%= forecast.wind_direction %>
-                                </div>
-                              </div>
-
-                              <div class='row'>
-                                <div class='col'>
-                                  <strong>Sunrise:</strong> <%= forecast.sunrise %>
-                                </div>
-                              </div>
-                              <div class='row'>
-                                <div class='col'>
-                                  <strong>Sunset:</strong> <%= forecast.sunset %>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class='card-footer'>
-              <a href='#' id="trigger_detail_<%= idx %>" data-action='click->forecast#showDetail'>Details</a>
-            </div>
-          </div>
-        </div>
+        <%= render partial: 'daily_forecast', locals: { forecast: forecast, idx: idx } %>
       <% end %>
     </div>
+
     <div id='forecast-detail' class='container'>
     </div>
+
     <% if @cached_report %>
       <div class='row mt-4'>
         <div class='col align-self-center'>
