Flesh out README

--- a/app/views/weather_reports/by_address.html.erb
+++ b/app/views/weather_reports/by_address.html.erb
@@ -37,7 +37,7 @@
     <% if @cached_report %>
       <div class='row mt-4'>
         <div class='col align-self-center'>
-          <p>* This report was cached and may as much as 30 minutes out of date.</p>
+          <p>* This report was cached and may be as much as 30 minutes out of date.</p>
         </div>
       </div>
     <% end %>
